# ifrs18-oras

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: codebook_v0.1.0.json  codebook_v0.1.1.json  codebook_v0.1.2.json  codebook_v0.1.3.json  codebook_v0.1.4.json  codebook_v0.1.5.json  codebook_v0.1.6.json
docs/: accounting_review_checklist.md  data_dictionary.md  ifrs18_oras_before_pilot_checklist.md  manual_validation.md  methodological_positioning_ifrs18_oras.md  methodological_precedents_table.md  methodology.md  reproducibility.md  validation_v0.1.5.md  validation_v0.1.6.md
scripts/: analyze_methodological_precedents.py
src/ifrs18_oras/: __init__.py  __main__.py  cli.py  config.py  detection.py  extraction.py  models.py  reporting.py  scoring.py  validation.py
tests/: test_integration.py  test_unit.py
validation/: manual_dimension_scores_v0.1.csv
