[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ifrs18-oras"
version = "0.1.0"
description = "Deterministic IFRS18-ORAS observable documentary alignment scoring pipeline"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Placeholder author - to be completed before release"}]
dependencies = [
  "PyMuPDF>=1.24,<2",
  "lxml>=5.0,<7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[project.scripts]
ifrs18-oras = "ifrs18_oras.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
